# f1-letterboxd

./: .bazelignore  .gitignore  BUILD.bazel  MODULE.bazel  README.md  WORKSPACE
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  playwright.yml
backend/: BUILD.bazel  go.mod  go.sum  main.go  seed.go
e2e/: BUILD.bazel  package-lock.json  package.json  playwright.config.ts  run_e2e_tests.sh
e2e/tests/: homepage.spec.ts  navigation.spec.ts  race.spec.ts  season.spec.ts
frontend/: BUILD.bazel  index.html  package-lock.json  package.json  playwright.config.ts
frontend/src/: App.css  App.tsx
frontend/src/components/: Header.tsx
frontend/src/pages/: HomePage.tsx  RacePage.tsx  RacesPage.tsx  ReviewsPage.tsx  SeasonPage.tsx
frontend/tests/: homepage.spec.ts  navigation.spec.ts  race.spec.ts  season.spec.ts
