module(name = "f1_letterboxd")

bazel_dep(name = "rules_go", version = "0.48.1")
bazel_dep(name = "gazelle", version = "0.36.0")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//backend:go.mod")
use_repo(go_deps, "com_github_gin_gonic_gin", "io_gorm_driver_sqlite", "io_gorm_gorm")
