load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "backend_lib",
    srcs = [
        "main.go",
        "seed.go",
    ],
    importpath = "github.com/danialbeg/f1-letterboxd/backend",
    visibility = ["//visibility:private"],
    deps = [
        "@com_github_gin_gonic_gin//:gin",
        "@io_gorm_driver_sqlite//:sqlite",
        "@io_gorm_gorm//:gorm",
    ],
)

go_binary(
    name = "server",
    embed = [":backend_lib"],
    visibility = ["//visibility:public"],
)

# Data files that the server needs
filegroup(
    name = "data",
    srcs = [
        "f1_letterboxd.db",
    ],
    visibility = ["//visibility:public"],
)